git command added

--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <p>
         I comandi di GitHub
     </p>
+    <ul>
+        <li>git init</li>
+        <li>git add nomefile.estensione</li>
+        <li>git commit -am "nomefile.estensione"</li>
+        <li>git push</li>
+    </ul>
 </body>
 </html>
